--- a/css/style.css
+++ b/css/style.css
@@ -19,28 +19,25 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0;
+  padding: 0;
   font-family: "Segoe UI", sans-serif;
   background: gray;
   height: 100vh;
-}
-
-/*-------------------*/
-body {
-  margin: 0;
-  padding: 0;
   overflow-y: hidden;
 }
 
+/*-------------------*/
 #titlebar {
   font-family: "Segoe UI", sans-serif;
+  font-size: 0.8rem;
   padding: 0;
   margin: 0;
-  position: absolute;
   display: block;
   height: 32px;
-  width: calc(100% - 2px);
+  width: calc(100% - 0px);
   /*Compensate for body 1px border*/
   background: #323233;
+  padding: 4px 0px 0px 4px;
   color: lightgray;
 }
 
@@ -58,6 +55,7 @@ body {
 }
 
 #app-icon {
+  margin: -4px 0 4px 0;
   -ms-grid-column: 1;
   grid-column: 1;
 }
@@ -69,6 +67,8 @@ body {
 #menubar {
   -ms-grid-column: 2;
   grid-column: 2;
+  margin: -4px 0 4px 0;
+  z-index: 100;
   -webkit-app-region: no-drag;
   margin-left: 10px;
   font-size: 0.8rem;
@@ -181,23 +181,15 @@ body {
 #caption {
   -ms-grid-column: 3;
   grid-column: 3;
-  margin: 4px 4px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin: -4px auto 4px auto;
   overflow: hidden;
-  font-family: "Segoe UI", sans-serif;
-  font-size: 0.8rem;
 }
 
 #caption span {
+  line-height: 32px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  line-height: 1.5rem;
 }
 
 #sys-btns {
@@ -212,6 +204,7 @@ body {
 }
 
 #sys-btns .button {
+  margin-top: -4px;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1 / span 1;
@@ -247,6 +240,10 @@ body {
   grid-column: 2;
 }
 
+#sys-btns #restore-button {
+  display: none !important;
+}
+
 #sys-btns #close-button {
   -ms-grid-column: 3;
   grid-column: 3;
@@ -261,25 +258,14 @@ body {
           filter: brightness(80%);
 }
 
-#restore-button {
-  display: none !important;
-}
-
-.maximized #restore-button {
+.maximized #sys-btns #restore-button {
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important;
 }
 
-.maximized #max-button {
+.maximized #sys-btns #max-button {
   display: none;
-}
-
-@media (-webkit-device-pixel-ratio: 1.5), (device-pixel-ratio: 1.5), (-webkit-device-pixel-ratio: 2), (device-pixel-ratio: 2), (-webkit-device-pixel-ratio: 3), (device-pixel-ratio: 3) {
-  #sys-btns .icon {
-    width: 10px;
-    height: 10px;
-  }
 }
 
 #main {
@@ -306,18 +292,45 @@ body {
 }
 
 #main2 {
-  padding: 100px 50px;
-  overflow-y: auto;
-  color: black;
+  display: none;
+  position: static;
+  margin: 0;
+  padding: 0 50px;
+  color: white;
 }
 
-#statusbar {
-  background: skyblue;
-  position: fixed;
+#react-root {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  background-color: blue;
+}
+
+#react-root #youTubePlayer1 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  position: relative;
   width: 100%;
-  bottom: 0;
-  left: 0;
-  /* Rest of your styling */
+  padding: 50px;
+  background-color: black;
+  /* padding-bottom: 56.25%; */
+}
+
+#react-root #youTubePlayer1 iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#react-root #statusbar {
+  height: 20px;
+  background-color: #323233;
 }
 
 .notification-close {
